2009-08-13
	* FE: Make links to detail views simpler for RealURL usage.
	  The "Back" link now is only shown when going to detail view from list view.
	  There is no "Back" link when going from detail view to another detail view.
	* Cleanup code: Changed method for getting language overlay records.

2009-08-12
	* BE: Remember the selected function and sub module for each page seperate.
	  Now you don't have to select the function "Event data" or "Common data"
	  according to the content of the selected page when you switch between pages.
	  The last selection is restored when you select a page.
	* Caching is now on per default and can be disabled via TS setting.
	* Fixed SQL errors when showing plugin with detail view without an uid given
	  in the URL.

2009-08-11
	* Many changes to fit the TYPO3 coding guide lines.

2009-08-09
	* BE: Fixed missing field values when add new speaker restriction after saving
	  a speaker restriction using the saveDocNew button.

2009-08-08
	* Update documentation with new layout template.

2008-11-23
	* Version 1.1.17
	* FE: When the event is in the past and no presentation handouts are available
	  then show a message about missing handouts.
	* Raise the maximum document size for presentations from 5000kB to 10000kB.

2008-10-14
	* Version 1.1.16
	* BE: New function to update the names of timeslots.
	* BE: New format of time slot names when editing time slots.
	* BE: Show room number in room list and show order by room number.
	* BE: Fixed wrong end time when creating new speaker restriction record.

2008-10-12
	* FE: Fixed wrong sort order of room in time slot view.
	* FE: Fix wrong width of time slot if one slot in a row is missing.
	
2008-10-03
	* Version 1.1.15
	* BE: Added form to create many time slots when no time slots are defined
	  for an event.

2008-09-10
	* Version 1.1.14
	* BE: Fixed SQL error when creating new session.
	* BE: Fixed missing short category name in sessionlist when no sub pages exist.