@@ -53,10 +53,16 @@
 				<tr class="tx-wseevents-pi1-listrow-even">
 					<td valign="top"><p>###SESSIONNUMBER###</p></td><td valign="top" title="###TEASERDATA###"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###TIMESLOTS###</p></td><td valign="top"><p>###DOCUMENTSDATA###</p></td>
 				</tr>
+				<tr class="tx-wseevents-pi1-listrow-even">
+				<td valign="top"></td><td valign="top" colspan="3"><p>###DESCRIPTIONDATA###</p></td>
+				</tr>
 				<!-- ###ITEM### -->
 				<!-- ###ITEM_ALT### -->
 				<tr class="tx-wseevents-pi1-listrow-odd">
 					<td valign="top"><p>###SESSIONNUMBER###</p></td><td valign="top" title="###TEASERDATA###"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###TIMESLOTS###</p></td><td valign="top"><p>###DOCUMENTSDATA###</p></td>
+				</tr>
+				<tr class="tx-wseevents-pi1-listrow-odd">
+				<td valign="top"></td><td valign="top" colspan="3"><p>###DESCRIPTIONDATA###</p></td>
 				</tr>
 				<!-- ###ITEM_ALT### -->
 			<!-- ###SINGLEROW### end -->
